<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/scroll_menu0"
        style="@style/horizontal_menu_item"
        android:text="@string/menuhome" />
    <TextView
        android:id="@+id/scroll_menu1"
        style="@style/horizontal_menu_item"
        android:text="@string/menu1" />

    <TextView
        android:id="@+id/scroll_menu2"
        style="@style/horizontal_menu_item"
        android:text="@string/menu2" />

    <TextView
        android:id="@+id/scroll_menu3"
        style="@style/horizontal_menu_item"
        android:text="@string/menu3" />

    <TextView
        android:id="@+id/scroll_menu4"
        style="@style/horizontal_menu_item"
        android:text="@string/menu4" />

    <TextView
        android:id="@+id/scroll_menu5"
        style="@style/horizontal_menu_item"
        android:text="@string/menu5" />

    <TextView
        android:id="@+id/scroll_menu6"
        style="@style/horizontal_menu_item"
        android:text="@string/menu6" />

</LinearLayout>
