<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/monymusicback">

<LinearLayout
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent">

        <HorizontalScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:nestedScrollingEnabled="true"
            android:orientation="horizontal"
            android:background="#AAFDFED6">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                        <TextView
                            android:id="@+id/scroll_menu0"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:keepScreenOn="true"
                            android:padding="8dp"
                            android:text="@string/menuhome"
                            android:textColor="#FFFFFF"
                            android:textSize="14sp"
                            android:onClick="ScrollMenu"/>
                        <TextView
                            android:id="@+id/scroll_menu1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:keepScreenOn="true"
                            android:padding="8dp"
                            android:text="@string/menu1"
                            android:textColor="#FFFFFF"
                            android:textSize="14sp"
                            android:onClick="ScrollMenu"/>

                        <TextView
                            android:id="@+id/scroll_menu2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:keepScreenOn="true"
                            android:padding="8dp"
                            android:textColor="#FFFFFF"
                            android:text="@string/menu2"
                            android:textSize="14sp"
                            android:onClick="ScrollMenu"/>

                        <TextView
                            android:id="@+id/scroll_menu3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:keepScreenOn="true"
                            android:padding="8dp"
                            android:text="@string/menu3"
                            android:textColor="#FFFFFF"
                            android:textStyle="bold"
                            android:textSize="15sp"/>

                        <TextView
                            android:id="@+id/scroll_menu4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:keepScreenOn="true"
                            android:padding="8dp"
                            android:text="@string/menu4"
                            android:textColor="#FFFFFF"
                            android:textSize="14sp"
                            android:onClick="ScrollMenu"/>

                        <TextView
                            android:id="@+id/scroll_menu5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:keepScreenOn="true"
                            android:padding="8dp"
                            android:text="@string/menu5"
                            android:textColor="#FFFFFF"
                            android:textSize="14sp"
                            android:onClick="ScrollMenu"/>
                        <TextView
                            android:id="@+id/scroll_menu6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:keepScreenOn="true"
                            android:padding="8dp"
                            android:text="@string/menu6"
                            android:textColor="#FFFFFF"
                            android:textSize="14sp"
                            android:onClick="ScrollMenu"/>
                </LinearLayout>
        </HorizontalScrollView>

        <!-- Header -->
        <LinearLayout android:id="@+id/header"
            android:background="#AAFDE756"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            >
                <TextView android:id="@+id/item1"
                    android:layout_height="fill_parent"
                    android:layout_width="wrap_content"
                    android:width="50dip"
                    android:height="30dip"
                    android:gravity="center"
                    android:text="@string/playlistheader1"
                    />
                <TextView android:id="@+id/item2"
                    android:layout_height="fill_parent"
                    android:layout_width="wrap_content"
                    android:text="@string/playlistheader2"
                    android:gravity="center_vertical"
                    android:width="100dip"
                    android:height="30dip"
                    />

        </LinearLayout>

        <!-- List Divider -->
        <View android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#000000" />

        <!-- ListView (grid_items) -->
        <LinearLayout android:id="@+id/layout"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            >
                <ListView android:id="@+id/listview"
                    android:layout_height="fill_parent"
                    android:layout_width="fill_parent"
                    >
                </ListView>
        </LinearLayout>
</LinearLayout>
        <Button
            style="@style/button_add"
            android:text="+"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/roundedbutton"
            android:gravity="center"
            android:id="@+id/button_add"
            android:onClick="addList"/>

</RelativeLayout>
