<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/monymusicback"
    android:scaleType="fitXY"
    android:fitsSystemWindows="true">
    tools:context="com.example.android.monymusic.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:src="@drawable/monymusiclogo"
            android:scaleType="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX ="1"
            android:scaleY ="1"
            android:adjustViewBounds="true"
            />

    <LinearLayout
        android:id="@+id/menu1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:orientation="horizontal"
        android:background="#AAFDFED6">

        <ImageView
            android:src="@drawable/menu1"
            android:scaleType="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX ="1"
            android:scaleY ="1"
            android:adjustViewBounds="true"
            />

    <TextView
        android:id="@+id/menu1_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:keepScreenOn="true"
        android:text="@string/menu1"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingTop="8sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:orientation="horizontal"
        android:background="#AAFDE756">

        <ImageView
            android:src="@drawable/menu2"
            android:scaleType="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX ="1"
            android:scaleY ="1"
            android:adjustViewBounds="true"
            />

        <TextView
            android:id="@+id/menu2_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:keepScreenOn="true"
            android:text="@string/menu2"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingTop="8sp"/>

    </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:id="@+id/menu3"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:orientation="horizontal"
            android:background="#AAFCA483">

            <ImageView
                android:src="@drawable/menu3"
                android:scaleType="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX ="1"
                android:scaleY ="1"
                android:adjustViewBounds="true"
                />

            <TextView
                android:id="@+id/menu3_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:keepScreenOn="true"
                android:text="@string/menu3"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingTop="8sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:id="@+id/menu4"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:orientation="horizontal"
            android:background="#AAF9648D">

            <ImageView
                android:src="@drawable/menu4"
                android:scaleType="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX ="1"
                android:scaleY ="1"
                android:adjustViewBounds="true"
                />

            <TextView
                android:id="@+id/menu4_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:keepScreenOn="true"
                android:text="@string/menu4"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingTop="8sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:id="@+id/menu5"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:orientation="horizontal"
            android:background="#AAFD535A">

            <ImageView
                android:src="@drawable/menu5"
                android:scaleType="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX ="1"
                android:scaleY ="1"
                android:adjustViewBounds="true"
                />

            <TextView
                android:id="@+id/menu5_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:keepScreenOn="true"
                android:text="@string/menu5"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingTop="8sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:id="@+id/menu6"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:orientation="horizontal"
            android:background="#AAFF213F">

            <ImageView
                android:src="@drawable/menu6"
                android:scaleType="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX ="1"
                android:scaleY ="1"
                android:adjustViewBounds="true"
                />

            <TextView
                android:id="@+id/menu6_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:keepScreenOn="true"
                android:text="@string/menu6"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingTop="8sp"/>

        </LinearLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/dummy_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummy_button" />

        </LinearLayout>
    </FrameLayout>-->
</LinearLayout>

</FrameLayout>
